# autonomous-cloudops-ai-platform

./: LICENSE  README.md
cloudops-agent/: Dockerfile  PHASE2_COMMANDS.sh  PHASE5_COMMANDS.sh  PHASE6_COMMANDS.sh  irsa_secrets.tf.disabled  pyproject.toml  test_imports.py
cloudops-agent/agent/: graph.py  state.py
cloudops-agent/agent/nodes/: analyze_node.py  approval_node.py  cost_optimizer_node.py  ingest_node.py  plan_node.py  remediate_node.py  report_node.py
cloudops-agent/api/: main.py  slack_setup.py
cloudops-agent/argocd/: cloudops-agent-app.yaml
cloudops-agent/helm/: values.yaml
cloudops-agent/helm/agent/templates/: deployment.yaml
cloudops-agent/infra/: cloudwatch_main.tf  eks_main.tf  iam_main.tf  variables.tf  vpc_main.tf
cloudops-agent/infra/grafana/: grafana_dashboard.json.json
cloudops-agent/observability/: otel_collector.yaml  telemetry.py
cloudops-agent/rag/: diagnosis_engine.py  embedder.py  ingest_aws_docs.py  live_log_ingestor.py  logging.json  query_engine.py  setup_indexes.py
cloudops-agent/tests/: advanced_demo.py  test_agent.py  test_api.py  test_phase6.py
