[project]
name = "cloudops-agent"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "langgraph",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "pinecone-client",
    "boto3",
    "slack-sdk",
    "pydantic-settings",
    "opentelemetry-sdk"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pytest-asyncio"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "api", "rag", "alerts", "ingestion", "remediation"]